--- a/app/src/main/res/layout/activity_edit_my_info.xml
+++ b/app/src/main/res/layout/activity_edit_my_info.xml
@@ -42,6 +42,7 @@
                 android:text="기본 정보 수정"/>
 
             <TextView
+                android:id="@+id/tv_done"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="normal"
@@ -93,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name">
 
         <EditText
-            android:id="@+id/et_first_name"
+            android:id="@+id/et_last_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
@@ -124,7 +125,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name">
 
         <EditText
-            android:id="@+id/et_name"
+            android:id="@+id/et_first_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
@@ -176,13 +177,11 @@
             android:layout_marginVertical="14dp"
             android:background="@null"
             android:fontFamily="@font/roboto_medium"
-            android:text="출생년도\u0028YYYY\u0029"
-            android:inputType="number"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="13sp"
-            android:textColor="@color/hintTxtColor"
+            android:textStyle="bold"
             android:textSize="16sp"
-            android:textStyle="normal" />
+            android:textColor="#343434"
+            android:letterSpacing="-0.01"
+            android:lineSpacingExtra="13sp" />
     </RelativeLayout>
 
     <TextView
