--- a/app/src/main/res/layout/item_rv_add_to_do.xml
+++ b/app/src/main/res/layout/item_rv_add_to_do.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginBottom="12dp"
+    android:id="@+id/ll_root"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_to_do_rv">
 
