--- a/app/src/main/res/layout/activity_edit_worker_two.xml
+++ b/app/src/main/res/layout/activity_edit_worker_two.xml
@@ -23,6 +23,7 @@
             android:background="@color/white">
 
             <ImageButton
+                android:id="@+id/ibtn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
@@ -38,7 +39,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:text="근무자 추가"
+                android:text="근무자 편집"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -83,7 +84,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="66dp"
+                android:layout_height="49dp"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/fill_light_gray_radius_20">
@@ -95,7 +96,7 @@
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:paddingHorizontal="24dp"
-                    android:text="해당 업무리스트는 포지션 담당 업무로, 업무를 작성하면 근무자의 근무일에 고정되어 노출됩니다."
+                    android:text="근무자 편집 시 다음 근무일부터 모든 변경사항이 적용됩니다."
                     android:textColor="#a3a3a3"
                     android:textSize="12sp"
                     android:textStyle="normal" />
@@ -116,7 +117,6 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
-                android:visibility="gone"
                 android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
