[FEAT] 포지션 정보 API 연결 완료(새로고침)

--- a/app/src/main/res/layout/child_fragment_card_position_info.xml
+++ b/app/src/main/res/layout/child_fragment_card_position_info.xml
@@ -6,6 +6,10 @@
     android:background="#f8f8f8"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipelayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -213,6 +217,6 @@
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
