--- a/app/src/main/res/layout/activity_late_check.xml
+++ b/app/src/main/res/layout/activity_late_check.xml
@@ -95,7 +95,7 @@
             android:layout_toStartOf="@id/tv_late_unit"
             android:gravity="center"
             android:letterSpacing="-0.03"
-            android:text="0"
+            tools:text="0"
             android:textColor="#343434"
             android:textSize="24sp"
             android:textStyle="bold" />
