--- a/app/src/main/res/layout/activity_home_shop_list.xml
+++ b/app/src/main/res/layout/activity_home_shop_list.xml
@@ -54,7 +54,7 @@
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tb_late">
@@ -65,62 +65,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_shop_list"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:background="#fffaea">
-
-                <ImageView
-                    android:id="@+id/iv_store"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_store_24_px"
-                    android:layout_marginStart="24dp"
-                    android:layout_centerVertical="true"/>
-
-                <TextView
-                    android:id="@+id/tv_store_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:layout_toEndOf="@id/iv_store"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="17dp"
-                    android:textColor="#343434"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="3sp"
-                    android:text="서플라이 첨단점"/>
-
-                <ImageButton
-                    android:id="@+id/ibtn_trash"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:scaleType="center"
-                    android:background="@null"
-                    android:src="@drawable/ic_trash_24_px"
-                    android:layout_marginEnd="24dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
-
-                <ImageButton
-                    android:id="@+id/ibtn_edit"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:scaleType="center"
-                    android:background="@null"
-                    android:src="@drawable/ic_edit_24_px"
-                    android:layout_marginEnd="14dp"
-                    android:layout_toStartOf="@id/ibtn_trash"
-                    android:layout_centerVertical="true"/>
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_alignParentBottom="true"
-                android:background="#1a000000" />
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_rv_shop_list"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
@@ -135,7 +85,6 @@
         android:stateListAnimator="@null"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:enabled="false"
         android:fontFamily="@font/roboto_bold"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
