[FIX] 오늘의 근무자 조회 null 제거 대기중

--- a/app/src/main/res/layout/activity_today_worker_list.xml
+++ b/app/src/main/res/layout/activity_today_worker_list.xml
@@ -59,6 +59,7 @@
             android:background="@color/white">
 
             <ImageButton
+                android:id="@+id/ibtn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
@@ -90,6 +91,7 @@
         android:id="@+id/rv_today_workers"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_rv_todays_worker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tb_late"
