[FIX] 오늘의 근무자 조회 API 연결 완료

--- a/app/src/main/res/layout/item_rv_todays_worker.xml
+++ b/app/src/main/res/layout/item_rv_todays_worker.xml
@@ -8,8 +8,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="24dp"
-        android:background="@color/black" />
+        android:layout_marginStart="24dp"/>
 
     <TextView
         android:id="@+id/tv_position"
