[FEAT] 근무자 홈화면 api 엮기 완료

--- a/app/src/main/res/layout/child_fragment_home_w_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_w_opened.xml
@@ -125,6 +125,7 @@
         android:layout_marginHorizontal="24dp">
         <RelativeLayout
             android:id="@+id/rl_alarm"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="28dp"
             android:background="@drawable/bg_commute_alarm">
