--- a/app/src/main/res/layout/child_fragment_home_w_ready.xml
+++ b/app/src/main/res/layout/child_fragment_home_w_ready.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="536dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#ffefbc">
 
     <androidx.appcompat.widget.Toolbar
@@ -28,7 +29,7 @@
                     android:id="@+id/tv_shop_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="서플라이 첨단점"
+                    tools:text="서플라이 첨단점"
                     android:layout_alignParentStart="true"
                     android:textStyle="bold"
                     android:textSize="18sp"
@@ -101,7 +102,7 @@
             android:layout_below="@id/iv_icon"
             android:layout_centerHorizontal="true"
             android:gravity="center_horizontal"
-            android:text="9/26 일요일"/>
+            tools:text="9/26 일요일"/>
 
         <TextView
             android:id="@+id/tv_ment"
