[FEAT] 관리자 오늘의 할 일 API 엮기 완료

--- a/app/src/main/res/layout/child_fragment_home_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_opened.xml
@@ -871,6 +871,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_personal_work_bg"
         android:layout_width="match_parent"
         android:layout_height="117dp"
         android:background="@drawable/rectangle_fill_white_radius_20"
