--- a/app/src/main/res/layout/item_rv_personal_work_list.xml
+++ b/app/src/main/res/layout/item_rv_personal_work_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="16dp"
+    android:layout_marginHorizontal="24dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -19,6 +20,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="20dp">
             <ImageView
+                android:id="@+id/iv_honey_progress"
                 android:layout_width="68dp"
                 android:layout_height="68dp"
                 android:layout_centerVertical="true"
