[FIX] 매장 목록 활성화 셀 오류 수정

--- a/app/src/main/res/layout/activity_home_del_shop.xml
+++ b/app/src/main/res/layout/activity_home_del_shop.xml
@@ -168,6 +168,7 @@
         android:layout_marginStart="24dp">
 
         <TextView
+            android:id="@+id/tv_bottom_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="정말 OO를 삭제하시겠습니까?"
