[FEAT] 관리자 공동업무 추가 완료

--- a/app/src/main/res/layout/activity_add_worker_two.xml
+++ b/app/src/main/res/layout/activity_add_worker_two.xml
@@ -23,6 +23,7 @@
             android:background="@color/white">
 
             <ImageButton
+                android:id="@+id/ibtn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
