--- a/app/src/main/res/layout/activity_add_togehter_work_list.xml
+++ b/app/src/main/res/layout/activity_add_togehter_work_list.xml
@@ -21,6 +21,7 @@
             android:background="@color/white">
 
             <ImageButton
+                android:id="@+id/ibtn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
@@ -51,7 +52,7 @@
                 android:layout_marginEnd="16dp"
                 android:letterSpacing="-0.03"
                 android:text="완료"
-                android:textColor="#ffc400"
+                android:textColor="#adadad"
                 android:textSize="16sp"
                 android:textStyle="normal" />
 
@@ -113,6 +114,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_rv_add_to_do"
