[FEAT] 업무 삭제 API 완료(BUT 갱신은 안되는 상태)

--- a/app/src/main/res/layout/item_rv_undone_check.xml
+++ b/app/src/main/res/layout/item_rv_undone_check.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/ibtn_work_cancel"
+        android:id="@+id/ibtn_work_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
