[FEAT] 업무 완료하기 api 연결 완료

--- a/app/src/main/res/layout/child_fragment_together.xml
+++ b/app/src/main/res/layout/child_fragment_together.xml
@@ -209,6 +209,7 @@
                 <!-- 인원수 확인 클릭 시 -->
                 <FrameLayout
                     android:id="@+id/frame_layout_cnt_done_worker"
+                    android:visibility="gone"
                     android:layout_width="137dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="11dp"
