--- a/app/src/main/res/layout/activity_home_today_todo_list.xml
+++ b/app/src/main/res/layout/activity_home_today_todo_list.xml
@@ -67,6 +67,7 @@
             android:layout_height="42dp"
             android:background="@drawable/custom_tab_bg"
             app:tabGravity="fill"
+            android:outlineProvider="none"
             app:tabIndicator="@drawable/custom_tab_gradient"
             app:tabIndicatorColor="#343434"
             app:tabIndicatorFullWidth="true"
