--- a/app/src/main/res/layout/activity_add_togehter_work_list.xml
+++ b/app/src/main/res/layout/activity_add_togehter_work_list.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -114,6 +116,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
+                android:visibility="gone"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
