[FEAT] 근무자 홈화면 퇴근까지 남은시간 UI 실시간 반영완료

--- a/app/src/main/res/layout/activity_qr_scan.xml
+++ b/app/src/main/res/layout/activity_qr_scan.xml
@@ -30,6 +30,7 @@
             android:layout_height="56dp">
 
             <ImageButton
+                android:id="@+id/ibtn_close"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
