--- a/app/src/main/res/layout/child_fragment_home_w_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_w_opened.xml
@@ -56,6 +56,24 @@
                 android:layout_toStartOf="@id/ibtn_bell"
                 android:layout_centerVertical="true"/>
 
+            <FrameLayout
+                android:id="@+id/qr_frame_layout"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_toStartOf="@id/ibtn_bell"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="14dp">
+
+                <ImageView
+                    android:id="@+id/iv_qr_bedge"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:src="@drawable/ic_new_bedge"/>
+            </FrameLayout>
+
             <ImageButton
                 android:id="@+id/ibtn_bell"
                 android:layout_width="24dp"
@@ -230,7 +248,7 @@
                 android:gravity="center"
                 android:letterSpacing="-0.03"
                 android:lineSpacingExtra="10sp"
-                android:text="퇴근시간"
+                android:text="퇴근까지"
                 android:textColor="#6f6f6f"
                 android:textSize="12sp"
                 android:textStyle="normal" />
@@ -245,7 +263,7 @@
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="27sp"
-                android:text="16:56"
+                tools:text="16:56"
                 android:textColor="#242424"
                 android:textSize="30sp"
                 android:textStyle="normal" />
