--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -179,7 +179,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="공지사항"
+                android:text="앱 문의 • 공지사항"
                 android:layout_marginStart="24dp"
                 android:layout_centerVertical="true"
                 android:textStyle="normal"
