--- a/app/src/main/res/layout/activity_notice_content.xml
+++ b/app/src/main/res/layout/activity_notice_content.xml
@@ -41,7 +41,7 @@
             android:text="공지사항"/>
 
         <ImageView
-            android:id="@+id/tv_done"
+            android:id="@+id/iv_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_more_vertical_24_px"
@@ -49,8 +49,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="center"
-            android:layout_marginEnd="16dp"
-            android:text="완료"/>
+            android:layout_marginEnd="16dp"/>
 
         <View
             android:layout_width="0dp"
