--- a/app/src/main/res/layout/dialog_fragment_notice_menu_for_m.xml
+++ b/app/src/main/res/layout/dialog_fragment_notice_menu_for_m.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="163dp"
+    android:layout_height="221dp"
     android:background="@null">
 
     <TextView
@@ -22,7 +22,7 @@
 
     <LinearLayout
         android:id="@+id/ll_type"
-        android:layout_height="58dp"
+        android:layout_height="116dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="24dp"
@@ -37,6 +37,26 @@
             android:background="@drawable/bg_selector_type"
             android:layout_weight="1"
             android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <TextView
+                android:text="수정하기"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:textColor="#6f6f6f"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="3sp"
+                android:textStyle="normal"
+                android:layout_marginStart="24dp"
+                android:textSize="16sp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_row_two"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:background="@drawable/bg_selector_type"
             android:layout_height="0dp">
             <TextView
                 android:text="신고하기"
